files/main.css
:root {
	color-scheme: light dark;

	--background-color: #fff;
	--secondary-background-color: #f7f7f7;

	--color-blue: #049EF4;
	--text-color: #444;
	--secondary-text-color: #9e9e9e;

	--font-size: 18px;
	--line-height: 26px;

	--border-style: 1px solid #E8E8E8;
	--header-height: 48px;
	--panel-width: 300px;
	--panel-collapsed-width: 56px;
	--panel-padding: 16px;
	--icon-size: 20px;
}

@media (prefers-color-scheme: dark) {

	:root {
		--background-color: #222;
		--secondary-background-color: #2e2e2e;

		--text-color: #bbb;
		--secondary-text-color: #666;

		--border-style: 1px solid #444;
	}

	#previewsToggler {
		filter: invert(100%);
	}

}

@font-face {
	font-family: 'Roboto Mono';
	src: local('Roboto Mono'), local('RobotoMono-Regular'), url('../files/RobotoMono-Regular.woff2') format('woff2');
	font-style: normal;
	font-weight: 400;
}

@font-face {
	font-family: 'Roboto Mono';
	src: local('Roboto Mono Medium'), local('RobotoMono-Medium'), url('../files/RobotoMono-Medium.woff2') format('woff2');
	font-style: normal;
	font-weight: 500;
}

* {
	box-sizing: border-box;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

html, body {
	height: 100%;
}

html {
	font-size: calc(var(--font-size) - 1px);
	line-height: calc(var(--line-height) - 1px);
}

body {
	font-family: 'Roboto Mono', monospace;
	margin: 0px;
	color: var(--text-color);
	background-color: var(--background-color);
}

a {
	text-decoration: none;
}

h1 {
	font-size: 18px;
	line-height: 24px;
	font-weight: 500;
}

h2 {
	padding: 0;
	margin: 16px 0;
	font-size: calc(var(--font-size) + 1px);
	line-height: var(--line-height);
	font-weight: 700;
	color: var(--color-blue);
}

h3 {
	margin: 0;
	font-weight: 500;
	font-size: calc(var(--font-size) - 1px);
	line-height: var(--line-height);
	color: var(--secondary-text-color);
}

h1 a {
	color: var(--color-blue);
}

#header {
	display: flex;
	height: var(--header-height);
	border-bottom: var(--border-style);
	align-items: center;
	min-width: 0;
	flex-shrink: 0;
}

#mobileHomeButton {
	display: none;
}
#header h1 {
	padding-left: var(--panel-padding);
	flex: 1;
	display: flex;
	align-items: center;
	color: var(--color-blue);
}
#header #version {
	border: 1px solid var(--color-blue);
	color: var(--color-blue);
	border-radius: 4px;
	line-height: 16px;
	padding: 0px 2px;
	margin-left: 6px;
	font-size: .9rem;
}
#panel {
	position: fixed;
	z-index: 100;
	left: 0px;
	width: var(--panel-width);
	height: 100%;
	overflow: auto;
	border-right: var(--border-style);
	display: flex;
	flex-direction: column;
	transition: 0s 0s height;
}

	#panel #exitSearchButton {
		width: 48px;
		height: 48px;
		display: none;
		background-color: var(--text-color);
		background-size: var(--icon-size);
		-webkit-mask-image: url(../files/ic_close_black_24dp.svg);
		-webkit-mask-position: 50% 50%;
		-webkit-mask-repeat: no-repeat;
		mask-image: url(../files/ic_close_black_24dp.svg);
		mask-position: 50% 50%;
		mask-repeat: no-repeat;
		cursor: pointer;
		margin-right: 0px;
	}

	#panel.searchFocused #exitSearchButton {
		display: block;
	}

	#panel.searchFocused #language {
		display: none;
	}

	#panel.searchFocused #filterInput {
		-webkit-mask-image: none;
		mask-image: none;
		background-color: inherit;
		padding-left: 0;
	}

	#panel #panelToggle {
		-webkit-mask-image: url(../files/ic_menu_black_24dp.svg);
		mask-image: url(../files/ic_menu_black_24dp.svg);
		transform: none;
	}

	#panel #sections {
		display: flex;
		justify-content: center;
		z-index: 1000;
		position: relative;
		height: 100%;
		align-items: center;
		font-weight: 500;
	}

	#panel #sections * {
		padding: 0 var(--panel-padding);
		height: 100%;
		position: relative;
		display: flex;
		justify-content: center;
		align-items: center;
	}
	#panel #sections .selected:after {
		content: "";
		position: absolute;
		left: 0;
		right: 0;
		bottom: -1px;
		border-bottom: 1px solid var(--text-color);
	}
	#panel #sections a {
		color: var(--secondary-text-color);
	}

	body.home #panel #sections {
		display: none;
	}


#panel #inputWrapper {
	display: flex;
	align-items: center;
	height: var(--header-height);
	padding: 0 0 0 var(--panel-padding);
	position: relative;
	background: var(--background-color);
}
#panel #inputWrapper:after {
	position: absolute;
	left: 0;
	right: 0;
	bottom: 0;
	border-bottom: var(--border-style);
	content: "";
}

	#panel #filterInput {
		flex: 1;
		width: 100%;
		font-size: 1rem;
		font-weight: 500;
		color: var(--text-color);
		outline: none;
		border: 0px;
		background-color: var(--text-color);
		background-size: var(--icon-size);
		-webkit-mask-image: url(../files/ic_search_black_24dp.svg);
		-webkit-mask-position: 0 50%;
		-webkit-mask-repeat: no-repeat;
		mask-image: url(../files/ic_search_black_24dp.svg);
		mask-position: 0 50%;
		mask-repeat: no-repeat;
		font-family: 'Roboto Mono', monospace;
	}

	#panel #language {
		font-family: 'Roboto Mono', monospace;
		font-size: 1rem;
		font-weight: 500;
		color: var(--text-color);
		border: 0px;
		background-image: url(ic_arrow_drop_down_black_24dp.svg);
		background-size: var(--icon-size);
		background-repeat: no-repeat;
		background-position: right center;
		background-color: var(--background-color);
		padding: 2px 24px 4px 24px;
		-webkit-appearance: none;
		-moz-appearance: none;
		appearance: none;
		margin-right: 10px;
		text-align-last: right;
	}

		#panel #language:focus {
			outline: none;
		}

	#contentWrapper {
		flex: 1;
		overflow: hidden;
		display: flex;
		flex-direction: column;
	}

	#panel #content {
		flex: 1;
		overflow-y: auto;
		overflow-x: hidden;
		-webkit-overflow-scrolling: touch;
		padding: 0 var(--panel-padding) var(--panel-padding) var(--panel-padding);
	}

		#panel #content ul {
			list-style-type: none;
			padding: 0px;
			margin: 0px 0 20px 0;
		}
		#panel #content ul li {
			margin: 1px 0;
		}

		#panel #content h2:not(.hidden) {
			margin-top: 16px;
			border-top: none;
			padding-top: 0;
		}
/* ... */

